# ad

cpp/: README.md
cpp/src/: CMakeLists.txt  bottom_up_ad.cpp  main.cpp  simulate.cpp
python/: .gitignore  pyproject.toml
python/src/: main.py  sample.py
