[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["RyotaBannai <ryotala0528@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "3.6.0"
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
isort = "^5.10.1"
pytest = "^7.2.0"
scipy = "^1.9.3"
plotly = "^5.14.1"
pandas = "^2.0.0"
nbformat = "^5.8.0"
torch = "^2.0.0"
torchdiffeq = "^0.2.3"
autograd = "^1.5"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100 # override black's default line-length
exclude = '''
/(
  \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"